--- a/css/custom.css
+++ b/css/custom.css
@@ -1,412 +1,429 @@
-/* ヘッダー */
+/*-------------------------------------- ヘッダー --------------------------------------*/
 
-.toppage_top {
-  width: 100%;
-}
-
-.toppage {
-  width: 100%;
-  text-align: center;
-  position: relative;
-}
-
-.header_back {
-  width: 100%;
-}
-
-.toppage h1 {
-  top: 178px;
-  left: 50%;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  font-family: 'Noto Sans JP', sans-serif;
-  color: #FF5555;
-  font-size: 24px;
-  position: absolute;
+header {
+    width: 1167.4px;
+    height: 47.29;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    z-index: 99;
 }
 
 .toppage_header {
-  padding-top: 23.7px;
-  display: flex;
-  justify-content: center;
-  font-weight: bold;
-  position: absolute;
-  top: 23.7px;
-  left: 0;
-  right: 0;
-  margin: auto;
+    display: flex;
+    position: relative;
+    top: 23.7px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.toppage_header li {
-  list-style: none;
-  vertical-align: bottom;
-  white-space: nowrap;
-}
-
-.header_menu p {
-  font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
-  font-weight: bold;
-  color: #4A4A4A;
-  font-size: 15px;
-  margin-right: 36px;
+.logo {
+    width: 242.81px;
+    margin-right: 87.6px;
 }
 
 .logo img {
-  width: 242.81px;
-  margin-right: 87.6px;
+    width: 100%;
+}
+
+.header_menu {
+    justify-content: space-between;
+}
+
+.header_menu p {
+    font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
+    font-weight: bold;
+    color: #4A4A4A;
+    font-size: 15px;
+}
+
+
+/*------------------- トップページ -------------------------*/
+
+.main {
+    /* width: 100%; */
+}
+
+.header_back {
+    width: 100%;
+}
+
+.main h1 {
+    top: 178px;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    font-family: 'Noto Sans JP', sans-serif;
+    color: #FF5555;
+    font-size: 24px;
+    position: absolute;
 }
 
 .top_white {
-  position: absolute;
-  top: 346px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  background-color: #ffff;
-  width: 980px;
-  height: 321px;
-  z-index: 1;
+    position: absolute;
+    top: 346px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: #ffff;
+    width: 980px;
+    height: 321px;
+    z-index: 1;
 }
 
 .top_white_universe {
-  position: absolute;
-  top: 55.7px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 789px;
-  height: 342.6px;
-  padding: 0;
+    position: absolute;
+    top: 55.7px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 789px;
+    height: 342.6px;
+    padding: 0;
 }
 
 .top_white_logo {
-  position: absolute;
-  top: 36px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 300px;
-  height: 300px;
-  padding: 0;
+    position: absolute;
+    top: 36px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    padding: 0;
 }
 
 .top_white button {
-  position: absolute;
-  top: 275px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 99px;
-  height: 33px;
-  padding: 0;
-  color: #ffff;
-  background-color: #3D3D3D;
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 16px;
-  border: none;
+    position: absolute;
+    top: 275px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 99px;
+    height: 33px;
+    padding: 0;
+    color: #ffff;
+    background-color: #3D3D3D;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 16px;
+    border: none;
 }
 
 .Strengths {
-  position: absolute;
-  width: 100%;
-  height: 1332px;
-  background-color: #E7E7E7;
-  top: 573px;
-  text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 1332px;
+    background-color: #E7E7E7;
+    top: 573px;
+    text-align: center;
 }
 
 .strengths_main {
-  position: absolute;
-  top: 265px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  text-align: center;
+    position: absolute;
+    top: 265px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    text-align: center;
 }
 
 .strengths_main h2 {
-  color: #FF5555;
-  font-family: 'Noto Sans JP', sans-serif;
-  font-weight: bold;
-  font-size: 28px;
+    color: #FF5555;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-weight: bold;
+    font-size: 28px;
 }
 
 .strengths_main h3 {
-  color: #2E2E2E;
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 22px;
+    color: #2E2E2E;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 22px;
 }
 
 .strength_pic {
-  position: absolute;
-  top: 429px;
-  left: 0;
-  right: 0;
-  margin: auto;
+    position: absolute;
+    top: 1008px;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 .strength_pic_list1 {
-  display: flex;
-  width: 981px;
-  height: 331px;
-  padding-left: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  justify-content: space-between;
-  margin-bottom: 30px;
+    display: flex;
+    width: 981px;
+    height: 331px;
+    padding-left: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    text-align: center;
 }
 
 .strength_pic_list1 li {
-  width: 306px;
+    width: 306px;
 }
 
 .strength_pic_list1 img {
-  margin-bottom: 40.5px;
-  width: 306px;
-  height: 207.5px;
+    margin-bottom: 40.5px;
+    width: 306px;
+    height: 207.5px;
 }
 
 .strength_pic_list1 p {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 19px;
-  color: #1A1A1A;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 19px;
+    color: #1A1A1A;
 }
 
 .strength_pic_list2 {
-  display: flex;
-  width: 698px;
-  height: 363px;
-  padding-left: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  justify-content: space-between;
+    display: flex;
+    width: 698px;
+    height: 363px;
+    padding-left: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    justify-content: space-between;
+    text-align: center;
 }
 
 .strength_pic_list2 li {
-  width: 306px;
+    width: 306px;
 }
 
 .strength_pic_list2 img {
-  margin-bottom: 40.5px;
-  width: 306px;
-  height: 207.5px;
+    margin-bottom: 40.5px;
+    width: 306px;
+    height: 207.5px;
 }
 
 .strength_pic_list2 p {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 19px;
-  color: #1A1A1A;
-}
-
-.strength_pic button {
-  background-color: #3D3D3D;
-  width: 99px;
-  height: 33px;
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 16px;
-  color: #fff;
-}
-
-
-/* INTERVIEW */
-.interview_box {
-  height: 941.64px;
-}
-
-.interview_box h1 {
-  padding-top: 121px;
-  margin-bottom: 19px;
-  text-align: center;
-  font: normal normal bold 28px "Noto Sans CJK JP";
-  letter-spacing: 8.4px;
-  color: #FF5555;
-}
-
-.interview_box h2 {
-  margin-bottom: 98px;
-  text-align: center;
-  font: normal normal bold 22px "Noto Sans CJK JP";
-  letter-spacing: 4.4px;
-  color: #2E2E2E;
-}
-
-.interview_picture {
-  margin: auto;
-  width: 980.5px;
-}
-
-.interview_picture img {
-  position: relative;
-  height: 354px;
-}
-
-.interview_right_box {
-  position: relative;
-  width: 521.69px;
-  height: 420px;
-  top: -260px;
-  left: 450px;
-  background-color: #E7E7E7;
-  opacity: 0.9;
-}
-
-.interview_right_box h3 {
-  padding-top: 47.36px;
-  padding-bottom: 41px;
-  padding-left: 63.19px;
-  font: normal normal bold 22px "Noto Sans CJK JP";
-  letter-spacing: 4.4px;
-  color: #2E2E2E;
-}
-
-.interview_right_box p {
-  margin-left: 63.19px;
-  margin-bottom: 53px;
-  width: 412px;
-  text-align: left;
-  font: normal normal bold 16px/32px Noto Sans CJK JP;
-  letter-spacing: 3.2px;
-  color: #2E2E2E;
-}
-
-.interview_right_box a {
-  margin-left: 63.19px;
-  padding: 4px 25px 5px 26px;
-  background-color: #3D3D3D;
-  font: normal normal normal 16px "Noto Sans CJK JP";
-  letter-spacing: 0.8px;
-  color: #FFFFFF;
-}
-
-/* FLOW */
-.flow {
-  background-color: #0C0C0C;
-  color: #FFFFFF;
-  height: 757px;
-}
-
-.flow h1 {
-  text-align: center;
-  padding: 94.36px 0 19px;
-  font: normal normal bold 28px "Noto Sans CJK JP";
-  letter-spacing: 8.4px;
-}
-
-.flow h2 {
-  text-align: center;
-  margin-bottom: 103px;
-  font: normal normal normal 22px "Noto Sans CJK JP"!important;
-  letter-spacing: 4.4px;
-}
-
-.flow_icon_list {
-  display: flex;
-  justify-content: center;
-}
-
-.flow_icon {
-  width: 260px;
-}
-
-.flow_icon_number{
-  font: normal normal normal 30px "Ten Mincho";
-  letter-spacing: 1.5px;
-  color: #FF9494;
-  margin-left: 60px;
-  z-index: 10;
-  position: relative;
-}
-
-.icon_box {
-  width: 125px;
-  height: 105px;
-  background-color: #D6D6D6;
-  position: relative;
-  top: -20px;
-  left: 90px;
-  z-index: 5;
-}
-
-.icon_box p {
-  font: normal normal bold 18px "Noto Sans CJK JP";
-  letter-spacing: 3.6px;
-  color: #2E2E2E;
-  padding-top: 38px;
-}
-
-.flow_icon p {
-  text-align: center;
-}
-
-.flow_constract {
-  margin-top: 24px;
-  margin-bottom: 25px;
-  font: normal normal bold 18px "Noto Sans CJK JP";
-  letter-spacing: 3.6px;
-}
-
-.flow_detail {
-  font: normal normal normal 14px/32px "Noto Sans CJK JP";
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 19px;
+    color: #1A1A1A;
 }
 
 .more_button {
-  width: 99px;
-  height: 33px;
-  margin: 52px auto 88.64px;
+    background-color: #3D3D3D;
+    width: 99px;
+    height: 33px;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 16px;
+    color: #fff;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+
+/*------------------------------------ INTERVIEW --------------------------------------*/
+
+.interview_box {
+    height: 941.64px;
+}
+
+.interview_box h1 {
+    padding-top: 121px;
+    margin-bottom: 19px;
+    text-align: center;
+    font: normal normal bold 28px "Noto Sans CJK JP";
+    letter-spacing: 8.4px;
+    color: #FF5555;
+}
+
+.interview_box h2 {
+    margin-bottom: 98px;
+    text-align: center;
+    font: normal normal bold 22px "Noto Sans CJK JP";
+    letter-spacing: 4.4px;
+    color: #2E2E2E;
+}
+
+.interview_picture {
+    margin: auto;
+    width: 980.5px;
+}
+
+.interview_picture img {
+    position: relative;
+    height: 354px;
+}
+
+.interview_right_box {
+    position: relative;
+    width: 521.69px;
+    height: 420px;
+    top: -260px;
+    left: 450px;
+    background-color: #E7E7E7;
+    opacity: 0.9;
+}
+
+.interview_right_box h3 {
+    padding-top: 47.36px;
+    padding-bottom: 41px;
+    padding-left: 63.19px;
+    font: normal normal bold 22px "Noto Sans CJK JP";
+    letter-spacing: 4.4px;
+    color: #2E2E2E;
+}
+
+.interview_right_box p {
+    margin-left: 63.19px;
+    margin-bottom: 53px;
+    width: 412px;
+    text-align: left;
+    font: normal normal bold 16px/32px Noto Sans CJK JP;
+    letter-spacing: 3.2px;
+    color: #2E2E2E;
+}
+
+.interview_right_box a {
+    margin-left: 63.19px;
+    padding: 4px 25px 5px 26px;
+    background-color: #3D3D3D;
+    font: normal normal normal 16px "Noto Sans CJK JP";
+    letter-spacing: 0.8px;
+    color: #FFFFFF;
+}
+
+
+/* FLOW */
+
+.flow {
+    background-color: #0C0C0C;
+    color: #FFFFFF;
+    height: 757px;
+}
+
+.flow h1 {
+    text-align: center;
+    padding: 94.36px 0 19px;
+    font: normal normal bold 28px "Noto Sans CJK JP";
+    letter-spacing: 8.4px;
+}
+
+.flow h2 {
+    text-align: center;
+    margin-bottom: 103px;
+    font: normal normal normal 22px "Noto Sans CJK JP"!important;
+    letter-spacing: 4.4px;
+}
+
+.flow_icon_list {
+    display: flex;
+    justify-content: center;
+}
+
+.flow_icon {
+    width: 260px;
+}
+
+.flow_icon_number {
+    font: normal normal normal 30px "Ten Mincho";
+    letter-spacing: 1.5px;
+    color: #FF9494;
+    margin-left: 60px;
+    z-index: 10;
+    position: relative;
+}
+
+.icon_box {
+    width: 125px;
+    height: 105px;
+    background-color: #D6D6D6;
+    position: relative;
+    top: -20px;
+    left: 90px;
+    z-index: 5;
+}
+
+.icon_box p {
+    font: normal normal bold 18px "Noto Sans CJK JP";
+    letter-spacing: 3.6px;
+    color: #2E2E2E;
+    padding-top: 38px;
+}
+
+.flow_icon p {
+    text-align: center;
+}
+
+.flow_constract {
+    margin-top: 24px;
+    margin-bottom: 25px;
+    font: normal normal bold 18px "Noto Sans CJK JP";
+    letter-spacing: 3.6px;
+}
+
+.flow_detail {
+    font: normal normal normal 14px/32px "Noto Sans CJK JP";
+}
+
+.more_button {
+    width: 99px;
+    height: 33px;
+    margin: 52px auto 88.64px;
 }
 
 .more_button a {
-  background-color: #FFFFFF;
-  box-shadow: 0px 10px 20px #0000001A;
-  font: normal normal bold 16px "Noto Sans CJK JP";
-  letter-spacing: 0.8px;
-  color: #232323;
-  padding: 8px 25px 5px 26px;
-  white-space: nowrap;
+    background-color: #FFFFFF;
+    box-shadow: 0px 10px 20px #0000001A;
+    font: normal normal bold 16px "Noto Sans CJK JP";
+    letter-spacing: 0.8px;
+    color: #232323;
+    padding: 8px 25px 5px 26px;
+    white-space: nowrap;
 }
 
+
 /* フッター */
+
 footer {
-  font: normal normal bold 15px "Yu Gothic";
-  color: #4A4A4A;
-  white-space: nowrap;
+    font: normal normal bold 15px "Yu Gothic";
+    color: #4A4A4A;
+    white-space: nowrap;
 }
 
 .footer_link {
-  margin-top: 78.36px;
-  display: flex;
-  justify-content: center;
+    margin-top: 78.36px;
+    display: flex;
+    justify-content: center;
 }
 
 .footer_logo {
-  margin-right: 310.69px;
-  height: 47.29px;
+    margin-right: 310.69px;
+    height: 47.29px;
 }
 
 .footer_link a {
-  color: #4A4A4A;
+    color: #4A4A4A;
 }
 
 .footer_menu1 {
-  margin-right: 92px;
+    margin-right: 92px;
 }
 
-.footer_menu1 li{
-  margin-bottom: 46px;
+.footer_menu1 li {
+    margin-bottom: 46px;
 }
 
 .footer_menu2 li {
-  margin-bottom:30px;
+    margin-bottom: 30px;
 }
 
 .footer_menu2_li1 {
-  margin-bottom: 46px!important;
+    margin-bottom: 46px!important;
 }
 
 .copy_write {
-  text-align: center;
-  margin: 35.5px 0 37.5px;
+    text-align: center;
+    margin: 35.5px 0 37.5px;
 }
