--- a/css/custom.css
+++ b/css/custom.css
@@ -236,7 +236,7 @@ nav.globalMenuSp.active {
     right: 0;
     margin: auto;
     width: 80.51%;
-    height: auto;
+    height: 275px;;
 }
 
 .top_white_universe {
