--- a/css/custom.css
+++ b/css/custom.css
@@ -870,39 +870,82 @@ footer {
   color: #4A4A4A;
 }
 
-/*------------------------------------ TAM日記 --------------------------------------*/
+/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ ページ共通 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
 
-.tam_diary {
-  height: 290px;
-  background-image: url("../image/background_other.png");
-  background-size: cover;
-}
-
-.tam_diary h1 {
-  font: normal normal bold 28px Noto Sans CJK JP;
-  letter-spacing: 8.4px;
-  color: #FF5555;
-  text-align: center;
-  padding-top: 128px;
-}
-
-.tam_diary h2 {
-  font: normal normal bold 22px Noto Sans CJK JP;
-  letter-spacing: 4.4px;
-  color: #2E2E2E;
-  text-align: center;
-  margin-top: 19px;
-}
-
-.diary_list {
-  height: 35px;
-  background-color: #F8F8F8;
-}
-
-.diary_list p {
-  padding-top: 8px;
-  margin-left: 10%;
-  font: normal normal bold 14px Yu Gothic;
-}
-
-/*------------------------------------ 日記一覧 --------------------------------------*/
+.background_other {
+    height: 290px;
+    background-image: url("../image/background_other.png");
+    background-size: cover;
+  }
+  
+  .background_other h1 {
+    font: normal normal bold 28px Noto Sans CJK JP;
+    letter-spacing: 8.4px;
+    color: #FF5555;
+    text-align: center;
+    padding-top: 128px;
+  }
+  
+  .background_other h2 {
+    font: normal normal bold 22px Noto Sans CJK JP;
+    letter-spacing: 4.4px;
+    color: #2E2E2E;
+    text-align: center;
+    margin-top: 19px;
+  }
+  
+  .subtitle {
+    height: 35px;
+    background-color: #F8F8F8;
+  }
+  
+  .subtitle p {
+    padding-top: 8px;
+    margin-left: 10%;
+    font: normal normal bold 14px Yu Gothic;
+  }
+  
+  /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ TAM日記 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
+  
+  /*------------------------------------ 日記一覧 --------------------------------------*/
+  
+  /*    */
+  
+  /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 会社概要 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
+  
+  .company_informatino {
+    margin-top: 97px;
+  }
+  
+  .company_informatino ul {
+    margin: auto;
+    width: 978.93px;
+  }
+  
+  .company_informatino hr {
+    border: 1px solid #E7E7E7;
+    width: 978.93px;
+  }
+  
+  .company_informatino_row {
+    display: flex;
+    margin: 20px 0 19px;
+    position: relative;
+  }
+  
+  .information_title {
+    font: normal normal bold 16px Noto Sans CJK JP;
+    color: #2E2E2E;
+    position: absolute;
+  }
+  
+  .information_details {
+    font: normal normal normal 16px Noto Sans CJK JP;
+    color: #2E2E2E;
+    position: relative;
+    left: 252px;
+  }
+  
+  .information_details p {
+    margin-bottom: 3px;
+  }
