--- a/css/custom.css
+++ b/css/custom.css
@@ -23,11 +23,6 @@ header {
   margin-left: 20px;
 }
 
-.header_logo:hover {
-  opacity: 0.8;
-  transform: translateY(2px);
-}
-
 @media (min-width:1000px) {
   .header_logo {
     width: 242.81px;
@@ -247,6 +242,7 @@ nav.globalMenuSp.active {
   background-color: #ffff;
   width: 686px;
   height: 145px;
+  z-index: 10;
 }
 
 @media (min-width:1000px) {
@@ -362,7 +358,6 @@ nav.globalMenuSp.active {
   height: 1600px;
   background-color: #E7E7E7;
   text-align: center;
-  z-index: -1;
 }
 
 @media (min-width:1000px) {
@@ -674,12 +669,16 @@ nav.globalMenuSp.active {
   letter-spacing: 0.8px;
   color: #FFFFFF;
   box-shadow: 0px 10px 20px #0000001A;
+  display: block;
+  white-space: nowrap;
+  width: 88px;
 }
 
 @media (min-width:1000px) {
   .interview_right_box a {
     margin-left: 63.19px;
     font: normal normal bold 16px "Noto Sans CJK JP";
+    width: 103px;;
   }
 }
 
@@ -826,8 +825,10 @@ nav.globalMenuSp.active {
   font: normal normal bold 16px "Noto Sans CJK JP";
   letter-spacing: 0.8px;
   color: #232323;
-  padding: 8px 25px 5px 26px;
+  padding: 8px 25px 7px 26px;
   white-space: nowrap;
+  display: block;
+  width: 103px;
 }
 
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ フッター ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
@@ -842,7 +843,7 @@ footer {
 .top_back_arrow {
   position: absolute;
   top: -46px;
-  left: 80%;
+  right: 5%;
 }
 
 .footer_link {
@@ -860,11 +861,6 @@ footer {
   .footer_logo {
     margin-right: 310.69px;
   }
-}
-
-.footer_logo:hover {
-  opacity: 0.8;
-  transform: translateY(2px);
 }
 
 .footer_link a {
@@ -906,6 +902,14 @@ footer {
 
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ ページ共通 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
 
+a:hover {
+  opacity: 0.8;
+}
+
+.common_button:hover {
+  transform: translateY(2px);
+}
+
 .background_other {
   height: 290px;
   background-image: url("../image/background_other.png");
@@ -934,8 +938,9 @@ footer {
 }
 
 .subtitle p {
+  width:979.5px;
   padding-top: 8px;
-  margin-left: 10%;
+  margin: 0 auto;
   font: normal normal bold 14px Yu Gothic;
 }
 
@@ -944,42 +949,3 @@ footer {
 /*------------------------------------ 日記一覧 --------------------------------------*/
 
 /*    */
-
-/*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 会社概要 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
-
-.company_informatino {
-  margin-top: 97px;
-}
-
-.company_informatino ul {
-  margin: auto;
-  width: 978.93px;
-}
-
-.company_informatino hr {
-  border: 1px solid #E7E7E7;
-  width: 978.93px;
-}
-
-.company_informatino_row {
-  display: flex;
-  margin: 20px 0 19px;
-  position: relative;
-}
-
-.information_title {
-  font: normal normal bold 16px Noto Sans CJK JP;
-  color: #2E2E2E;
-  position: absolute;
-}
-
-.information_details {
-  font: normal normal normal 16px Noto Sans CJK JP;
-  color: #2E2E2E;
-  position: relative;
-  left: 252px;
-}
-
-.information_details p {
-  margin-bottom: 3px;
-}
